<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health Tracker App</string>
    <string name="menu_settings">Settings</string>
    
    <string name="landing_text_intro">Please Select A User Account Below to Begin</string>
    <string name="landing_select_user">Select User</string>
    <string name="landing_create_user">Create a New User</string>
    <string name="landing_logo_content_description">Our Logo</string>
    
    <string name="newuser_intro">Fill out the Information Below to make a New User Profile</string>
    <string name="newuser_name">Your Name</string>
    <string name="newuser_address">Your Address</string>
    <string name="newuser_phonenumbers">Your Phone Numbers</string>
    <string name="newuser_buttontext">Create New User Profile</string>
    
    <string name="mainmenu_intro">Below were gonna have 3 buttons (Tabs?): Edit User Profile, Health Measurements, Blood Pressure. For now, the toast that just appeared is the current user profile\'s ID (Passed from the first activity).</string>

</resources>